# nba-scores

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  refresh_dataset.py
.github/workflows/: refresh-dataset.yml
data/: games_2015.csv  games_2016.csv  games_2017.csv  games_2018.csv  games_2019.csv  games_2020.csv  games_2021.csv  games_2022.csv  games_2023.csv
